force-app/main/default/objects/FSL__Work_Rule_Entry__c/fields/FSL__Earliest_Break_Start__c.field-meta.xml
<CustomField>
    <fullName>FSL__Earliest_Break_Start__c</fullName>
    <inlineHelpText>The number of minutes from the start of the service resource&apos;s availability to the earliest allowed break start time. For example, enter 120 to schedule a break at least two hours after the day starts.</inlineHelpText>
    <label>Earliest Break Start (minutes)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>