force-app/main/default/objects/FSL__Work_Rule_Entry__c/fields/FSL__Latest_Break_End__c.field-meta.xml
<CustomField>
    <fullName>FSL__Latest_Break_End__c</fullName>
    <inlineHelpText>The number of minutes from the start of the service resource&apos;s availability to the latest allowed break end time. For example, enter 300 to schedule a lunch break to end no more than five hours after the day starts.</inlineHelpText>
    <label>Latest Break End (minutes)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>