force-app/main/default/objects/FSL__Work_Rule_Entry__c/fields/FSL__Work_Rule__c.field-meta.xml
<CustomField>
    <fullName>FSL__Work_Rule__c</fullName>
    <label>Work Rule</label>
    <referenceTo>FSL__Work_Rule__c</referenceTo>
    <relationshipLabel>Work Rule Entries</relationshipLabel>
    <relationshipName>Work_Rule_Entry</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>